--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,5 +9,19 @@
 
 <body>
     <h1>Lasagna</h1>
+        <img src="../images/lasagna.jpeg" alt="Finished Lasagna">
+    
+    <h2>Description</h2>
+        <h3>Ingredients</h3>
+            <ul>
+                <li>Lasagna Noodles</li>
+                <li>Cheese</li>
+                <li>Marinara sauce</li>
+            </ul>
+        <h3>Steps</h3>
+            <ol>
+                <li>Make the Lasagna</li>
+                <li>Eat the lasagna</li>
+            </ol>
 </body>
 </html>
